# Flower-Simulations

./: Fed_Learning.pptx
data/: data_2.csv  data_3.csv  data_banknote_authentication_org.csv
keys/: ids_rsa_client_1  ids_rsa_client_1.pub  ids_rsa_client_2  ids_rsa_client_2.pub  ids_rsa_client_3  ids_rsa_client_3.pub  ids_rsa_server  ids_rsa_server.pub
quickstart-pytorch/: README.md  client_1.py  client_2.py  client_3.py  pyproject.toml  server.py
quickstart-pytorch_docker/client/: README.md  client.py  data.csv  flower-client.dockerfile  pyproject.toml
quickstart-pytorch_docker/server/: README.md  server.py  server_flower.dockerfile
