[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "0.1.0"
description = "PyTorch Federated Learning Quickstart with Flower"
authors = [
    { name = "The Flower Authors", email = "hello@flower.ai" },
]
dependencies = [
    "flwr>=1.8.0,<2.0",
    "torch==2.1.1",
    "pandas",
    "scikit-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["."]
